normalize api response
