# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/attendance-histories": {
+        "/attendances/histories": {
             "get": {
                 "description": "Retrieves attendance histories based on department and date filter",
                 "consumes": [
@@ -31,6 +31,22 @@
                         "in": "query"
                     }
                 ],
+                "responses": {}
+            }
+        },
+        "/attendances/log": {
+            "get": {
+                "description": "Retrieves all attendance logs",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Attendance"
+                ],
+                "summary": "Get all attendance logs",
                 "responses": {}
             }
         },
